# yab

./: Cargo.toml  license  readme
bot/: Cargo.toml
bot/src/: main.rs
web/: Cargo.toml
web/src/: discord.rs  layout.rs  main.rs
web/src/components/: header.rs  profile.rs
web/src/pages/: index.rs
web/style/: core.scss
