[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-gateway = { version = "0.16", features = ["simd-json", "zlib-simd"] }
twilight-http = { version = "0.16", features = ["simd-json"] }

tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
