[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0" }

reqwest = { version = "0.12.22", default-features = false, features = ["charset", "rustls-tls", "http2", "system-proxy"] }

tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
